[package]
name = "macocr"
version = "0.3.0"
authors = ["riddleling <riddle.apple@gmail.com>"]
edition = "2024"
description = "An OCR Tool using Apple's Vision Framework API."
license = "MIT"
readme = "README.md"
keywords = ["apple", "macos", "mac", "ocr", "vision", "http", "server"]
repository = "https://github.com/riddleling/macocr"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
infer = "0.19.0"
objc2 = "0.6.1"
objc2-foundation = "0.3.1"
objc2-vision = "0.3.1"
axum = { version = "0.8.4", features = ["multipart"] }
tokio = { version = "1.47.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["limit", "trace"] }
tracing = "0.1.41"
tracing-subscriber =  { version ="0.3.19", features = ["env-filter"] }
uuid = { version = "1.17.0", features = ["v4"] }
serde = { version = "1.0.219", features = ["derive"] }
base64 = "0.22.1"
regex = "1.11.1"
termcolor = "1.4.1"